--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "9.3.5",
     "react": "16.13.1",
     "react-burger-menu": "^2.6.14",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-reveal": "^1.2.2"
   }
 }
